--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,4 @@
 <p id="notice"><%= notice %></p>
-
 <h1>Books</h1>
 
 <table>
@@ -30,4 +29,5 @@
 
 <br>
 
+<%= link_to "Log out", session_path, method: :delete %>
 <%= link_to 'New Book', new_book_path %>
